# ChangeLog for app-text/multitail
# Copyright 2000-2006 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/app-text/multitail/ChangeLog,v 1.37 2006/01/12 23:56:28 ka0ttic Exp $

*multitail-3.8.4 (12 Jan 2006)

  12 Jan 2006; Aaron Walker <ka0ttic@gentoo.org> -multitail-3.7.3.ebuild,
  +multitail-3.8.4.ebuild:
  Version bump; tidy development version.

  28 Oct 2005; Aaron Walker <ka0ttic@gentoo.org> -multitail-3.6.0.ebuild:
  Tidy old ebuild.

*multitail-3.7.3 (27 Oct 2005)

  27 Oct 2005; Aaron Walker <ka0ttic@gentoo.org> +multitail-3.7.3.ebuild:
  Version bump.

*multitail-3.6.0 (02 Aug 2005)

  02 Aug 2005; Aaron Walker <ka0ttic@gentoo.org> -multitail-3.5.7.ebuild,
  +multitail-3.6.0.ebuild:
  Version bump.

*multitail-3.5.7 (14 Jul 2005)

  14 Jul 2005; Aaron Walker <ka0ttic@gentoo.org> -multitail-3.5.5.ebuild,
  +multitail-3.5.7.ebuild:
  New development release.

*multitail-3.5.5 (28 Jun 2005)

  28 Jun 2005; Aaron Walker <ka0ttic@gentoo.org> -multitail-3.5.4.ebuild,
  +multitail-3.5.5.ebuild:
  Version bump.

*multitail-3.5.4 (03 Jun 2005)

  03 Jun 2005; Aaron Walker <ka0ttic@gentoo.org> -multitail-3.0.6.ebuild,
  -multitail-3.4.1.ebuild, +multitail-3.5.4.ebuild:
  Version bump; tidy old versions.

  07 May 2005; Aron Griffis <agriffis@gentoo.org> multitail-3.4.8.ebuild:
  stable on ia64

  24 Apr 2005; Michael Hanselmann <hansmi@gentoo.org>
  multitail-3.4.8.ebuild:
  Stable on ppc.

  11 Apr 2005; Gustavo Zacarias <gustavoz@gentoo.org>
  multitail-3.4.8.ebuild:
  Stable on sparc

  10 Apr 2005; Simon Stelling <blubb@gentoo.org> multitail-3.4.8.ebuild:
  stable on amd64

  09 Apr 2005; Aaron Walker <ka0ttic@gentoo.org> multitail-3.4.8.ebuild:
  Marked stable on x86.

  31 Mar 2005; Aron Griffis <agriffis@gentoo.org> multitail-3.4.5.ebuild:
  stable on ia64

*multitail-3.4.8 (01 Mar 2005)

  01 Mar 2005; Aaron Walker <ka0ttic@gentoo.org> +multitail-3.4.8.ebuild:
  Version bump.
