@@ -1,0 +1,3 @@
+MD5 af26ff2b8a6b7cc0e644f37ae60f0b02 multitail-3.8.6.tgz 75711
+RMD160 e2f076ae7a695885a83d58129e0f4c62d6142c74 multitail-3.8.6.tgz 75711
+SHA256 7cc70b42c1424bea45bb1ca30fa950396186ef2823e8ae00acb7223510100a5c multitail-3.8.6.tgz 75711
