@@ -1,6 +1,11 @@
 # ChangeLog for app-text/multitail
 # Copyright 2000-2006 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/app-text/multitail/ChangeLog,v 1.37 2006/01/12 23:56:28 ka0ttic Exp $
+# $Header: /var/cvsroot/gentoo-x86/app-text/multitail/ChangeLog,v 1.38 2006/02/22 21:22:20 ka0ttic Exp $
+
+*multitail-3.8.6 (22 Feb 2006)
+
+  22 Feb 2006; Aaron Walker <ka0ttic@gentoo.org> +multitail-3.8.6.ebuild:
+  Version bump.
 
 *multitail-3.8.4 (12 Jan 2006)
 
